--- a/style.css
+++ b/style.css
@@ -118,7 +118,6 @@ aside * {
   animation: entering 0.7s ease-in-out;
 }
 
-
 aside img:nth-child(2) {
   width: 150px;
   height: 150px;
@@ -127,6 +126,12 @@ aside img:nth-child(2) {
   border: 4px solid transparent;
   background: linear-gradient(#d39e33, #ed5636, #633bbc) padding-box,
     linear-gradient(260deg, #d39e33, #ed5636, #633bbc) border-box;
+
+    transition: transform 0.3s ease-in-out;
+}
+
+aside img:hover{
+  transform: scale(1.1);
 }
 
 aside p {
